force-app/main/default/objects/Account_Extension__c/fields/Auto_DDMS_Invoice_date__c.field-meta.xml
<CustomField>
    <fullName>Auto_DDMS_Invoice_date__c</fullName>
    <formula>ADDMONTHS(RDS_DDMS_SA_Date__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto DDMS Invoice date</label>
    <type>Date</type>
</CustomField>