force-app/main/default/objects/Account_Extension__c/fields/Client_Priority__c.field-meta.xml
<CustomField>
    <fullName>Client_Priority__c</fullName>
    <label>Client Priority</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Top 20</fullName>
            </value>
            <value>
                <fullName>2 - Premium</fullName>
            </value>
            <value>
                <fullName>3 - Standard</fullName>
            </value>
            <value>
                <fullName>4 - Rising Star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>