force-app/main/default/objects/Account_Extension__c/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <label>Customer Success Manager</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laura</fullName>
            </value>
            <value>
                <fullName>Paul</fullName>
            </value>
            <value>
                <fullName>Support Team</fullName>
            </value>
            <value>
                <fullName>Nicole</fullName>
            </value>
            <value>
                <fullName>Adam Papajcsik</fullName>
            </value>
            <value>
                <fullName>Sam Furminger</fullName>
            </value>
            <value>
                <fullName>Emma_G</fullName>
                <isActive>false</isActive>
                <label>Emma G</label>
            </value>
            <value>
                <fullName>Jamie</fullName>
                <isActive>false</isActive>
                <label>Jamie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>