force-app/main/default/objects/Account_Extension__c/fields/iATS_Client__c.field-meta.xml
<CustomField>
    <fullName>iATS_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iATS Client</label>
    <type>Checkbox</type>
</CustomField>