force-app/main/default/objects/Account_Extension__c/fields/Integration_AE_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_AE_Id__c</fullName>
    <externalId>true</externalId>
    <label>Integration_AE_Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>