force-app/main/default/objects/Account_Extension__c/fields/RDS_Artez_Closed__c.field-meta.xml
<CustomField>
    <fullName>RDS_Artez_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RDS Artez Closed</label>
    <type>Checkbox</type>
</CustomField>