force-app/main/default/objects/Account_Extension__c/fields/RDS_Artez_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>RDS_Artez_Closed_Reason__c</fullName>
    <label>RDS Artez Closed Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Functionality not available</fullName>
            </value>
            <value>
                <fullName>New provider</fullName>
            </value>
            <value>
                <fullName>Data Integration</fullName>
            </value>
            <value>
                <fullName>Service cancelled before set up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Service not activated (client canx)</fullName>
            </value>
            <value>
                <fullName>PayPal Merchant Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>