force-app/main/default/objects/Account_Extension__c/fields/RDS_Artez_Final_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_Artez_Final_Invoice_Date__c</fullName>
    <label>RDS Artez Final Invoice Date</label>
    <type>Date</type>
</CustomField>