force-app/main/default/objects/Account_Extension__c/fields/RDS_Artez_Modules__c.field-meta.xml
<CustomField>
    <fullName>RDS_Artez_Modules__c</fullName>
    <label>RDS Artez Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Personal Event</fullName>
            </value>
            <value>
                <fullName>Tribute</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>