force-app/main/default/objects/Account_Extension__c/fields/RDS_Artez_SA_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_Artez_SA_Date__c</fullName>
    <label>RDS Artez SA Date</label>
    <type>Date</type>
</CustomField>