force-app/main/default/objects/Account_Extension__c/fields/RDS_Auto_Artez_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_Auto_Artez_Invoice_Date__c</fullName>
    <formula>RDS_ORG_Setup_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RDS Auto Artez Invoice Date</label>
    <type>Date</type>
</CustomField>