force-app/main/default/objects/Account_Extension__c/fields/RDS_Auto_DDMS_First_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_Auto_DDMS_First_Invoice_Date__c</fullName>
    <formula>RDS_DDMS_SA_Date__c +90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RDS Auto DDMS First Invoice Date</label>
    <type>Date</type>
</CustomField>