force-app/main/default/objects/Account_Extension__c/fields/RDS_Auto_eDD_First_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_Auto_eDD_First_Invoice_Date__c</fullName>
    <formula>RDS_eDD_SA_Date__c +56</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RDS Auto eDD First Invoice Date</label>
    <type>Date</type>
</CustomField>