force-app/main/default/objects/Account_Extension__c/fields/RDS_Core_BACS_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>RDS_Core_BACS_Org_ID__c</fullName>
    <externalId>true</externalId>
    <label>RDS Core BACS Org ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>