force-app/main/default/objects/Account_Extension__c/fields/RDS_Database_Live__c.field-meta.xml
<CustomField>
    <fullName>RDS_Database_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to confirm that the database for the client has been set to live</description>
    <label>RDS Database Live</label>
    <type>Checkbox</type>
</CustomField>