force-app/main/default/objects/Account_Extension__c/fields/RDS_DDMS_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>RDS_DDMS_Closed_Reason__c</fullName>
    <label>RDS DDMS Closed Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complex requirements</fullName>
            </value>
            <value>
                <fullName>Cost issue</fullName>
            </value>
            <value>
                <fullName>Couldn&apos;t get a SUN</fullName>
            </value>
            <value>
                <fullName>New bureau</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product issue</fullName>
            </value>
            <value>
                <fullName>Service issue</fullName>
            </value>
            <value>
                <fullName>Transferring in-house</fullName>
            </value>
            <value>
                <fullName>Transfering in-house</fullName>
            </value>
            <value>
                <fullName>FM Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>