force-app/main/default/objects/Account_Extension__c/fields/RDS_DDMS_First_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_DDMS_First_Invoice_Date__c</fullName>
    <label>RDS DDMS First Invoice Date</label>
    <type>Date</type>
</CustomField>