force-app/main/default/objects/Account_Extension__c/fields/RDS_DDMS_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_DDMS_Live_Date__c</fullName>
    <label>RDS DDMS Live Date</label>
    <type>Date</type>
</CustomField>