force-app/main/default/objects/Account_Extension__c/fields/RDS_DDMS_Live_Date_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>RDS_DDMS_Live_Date_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RDS DDMS Live Date Completed by:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Extension</relationshipName>
    <type>Lookup</type>
</CustomField>