force-app/main/default/objects/Account_Extension__c/fields/RDS_DDMS_SA_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_DDMS_SA_Date__c</fullName>
    <description>Date agreement was signed by client</description>
    <label>RDS DDMS SA Date</label>
    <type>Date</type>
</CustomField>