force-app/main/default/objects/Account_Extension__c/fields/RDS_Direct_Client__c.field-meta.xml
<CustomField>
    <fullName>RDS_Direct_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If client is a direct client</description>
    <label>RDS Direct Client</label>
    <type>Checkbox</type>
</CustomField>