force-app/main/default/objects/Account_Extension__c/fields/RDS_eDD_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>RDS_eDD_Closed_Reason__c</fullName>
    <label>RDS eDD Closed Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Functionality not available</fullName>
            </value>
            <value>
                <fullName>Complex requirements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>