force-app/main/default/objects/Account_Extension__c/fields/RDS_eDD_Login__c.field-meta.xml
<CustomField>
    <fullName>RDS_eDD_Login__c</fullName>
    <label>RDS eDD Login</label>
    <type>TextArea</type>
</CustomField>