force-app/main/default/objects/Account_Extension__c/fields/RDS_eDD_Main_Site_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_eDD_Main_Site_Live_Date__c</fullName>
    <label>RDS eDD Main Site Live Date</label>
    <type>Date</type>
</CustomField>