force-app/main/default/objects/Account_Extension__c/fields/RDS_eDD_Main_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>RDS_eDD_Main_Site_URL__c</fullName>
    <label>RDS eDD Main Site URL</label>
    <type>Url</type>
</CustomField>