force-app/main/default/objects/Account_Extension__c/fields/RDS_eDD_SA_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_eDD_SA_Date__c</fullName>
    <label>RDS eDD SA Date</label>
    <type>Date</type>
</CustomField>