force-app/main/default/objects/Account_Extension__c/fields/RDS_Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>RDS_Fulfilment__c</fullName>
    <label>RDS Fulfilment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rapidata</fullName>
            </value>
            <value>
                <fullName>Rapidata - Dotmailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>