force-app/main/default/objects/Account_Extension__c/fields/RDS_Merchant_Provider__c.field-meta.xml
<CustomField>
    <fullName>RDS_Merchant_Provider__c</fullName>
    <label>RDS Merchant Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>WorldPay</fullName>
            </value>
            <value>
                <fullName>iATS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>