force-app/main/default/objects/Account_Extension__c/fields/RDS_Non_Two_Day_Processing__c.field-meta.xml
<CustomField>
    <fullName>RDS_Non_Two_Day_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RDS Non Two Day Processing</label>
    <type>Checkbox</type>
</CustomField>