force-app/main/default/objects/Account_Extension__c/fields/RDS_Number_of_DD_s_Transferred__c.field-meta.xml
<CustomField>
    <fullName>RDS_Number_of_DD_s_Transferred__c</fullName>
    <label>RDS Number of DD&apos;s Transferred</label>
    <type>TextArea</type>
</CustomField>