force-app/main/default/objects/Account_Extension__c/fields/RDS_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>RDS_Org_ID__c</fullName>
    <label>RDS Org ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>