force-app/main/default/objects/Account_Extension__c/fields/RDS_ORG_Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_ORG_Setup_Date__c</fullName>
    <label>RDS ORG Setup  Date</label>
    <type>Date</type>
</CustomField>