force-app/main/default/objects/Account_Extension__c/fields/RDS_PDD_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_PDD_Live_Date__c</fullName>
    <label>RDS PDD Live Date</label>
    <type>Date</type>
</CustomField>