force-app/main/default/objects/Account_Extension__c/fields/RDS_Service_User_Name__c.field-meta.xml
<CustomField>
    <fullName>RDS_Service_User_Name__c</fullName>
    <label>RDS Service User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>