force-app/main/default/objects/Account_Extension__c/fields/RDS_Service_User_Number__c.field-meta.xml
<CustomField>
    <fullName>RDS_Service_User_Number__c</fullName>
    <label>RDS Service User Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>