force-app/main/default/objects/Account_Extension__c/fields/RDS_Services__c.field-meta.xml
<CustomField>
    <fullName>RDS_Services__c</fullName>
    <label>RDS Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DDMS</fullName>
            </value>
            <value>
                <fullName>eDirectDebit</fullName>
            </value>
            <value>
                <fullName>Artez</fullName>
            </value>
            <value>
                <fullName>Contingency Service</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Control My Payment</fullName>
            </value>
            <value>
                <fullName>ANL</fullName>
            </value>
            <value>
                <fullName>Trigger Comms</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>