force-app/main/default/objects/Account_Extension__c/fields/RDS_Sponsoring_Bank__c.field-meta.xml
<CustomField>
    <fullName>RDS_Sponsoring_Bank__c</fullName>
    <label>RDS Sponsoring Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>Allied Irish</fullName>
            </value>
            <value>
                <fullName>Bank of Ireland</fullName>
            </value>
            <value>
                <fullName>Bank of Scotland</fullName>
            </value>
            <value>
                <fullName>CAF</fullName>
            </value>
            <value>
                <fullName>Clydesdale</fullName>
            </value>
            <value>
                <fullName>Coutts</fullName>
            </value>
            <value>
                <fullName>Danske Bank</fullName>
            </value>
            <value>
                <fullName>Handelsbanken</fullName>
            </value>
            <value>
                <fullName>Hoare</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>Lloyds</fullName>
            </value>
            <value>
                <fullName>NatWest</fullName>
            </value>
            <value>
                <fullName>RBS</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>The Cooperative Bank</fullName>
            </value>
            <value>
                <fullName>The Unity Bank</fullName>
            </value>
            <value>
                <fullName>TSB</fullName>
            </value>
            <value>
                <fullName>Yorkshire Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>