force-app/main/default/objects/Account_Extension__c/fields/RDS_SUN_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>RDS_SUN_Live_Date__c</fullName>
    <label>RDS SUN Live Date</label>
    <type>Date</type>
</CustomField>