force-app/main/default/objects/Account_Extension__c/fields/RDS_to_Process_eDD_Data__c.field-meta.xml
<CustomField>
    <fullName>RDS_to_Process_eDD_Data__c</fullName>
    <label>RDS to Process eDD Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>