force-app/main/default/objects/Account_Extension__c/fields/Salesforce_Build__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Build__c</fullName>
    <description>Who built client Salesforce Instance</description>
    <inlineHelpText>If client has in house Salesforce Admin enter this or name of Consultancy client is using</inlineHelpText>
    <label>Salesforce Build</label>
    <type>TextArea</type>
</CustomField>