force-app/main/default/objects/Account_Extension__c/validationRules/Must_Fill_out_DDMS_Completed_By_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Fill_out_DDMS_Completed_By_field</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( RDS_DDMS_Live_Date__c ) )
&amp;&amp; 
ISBLANK( RDS_DDMS_Live_Date_Completed_by__c )</errorConditionFormula>
    <errorDisplayField>RDS_DDMS_Live_Date_Completed_by__c</errorDisplayField>
    <errorMessage>You must complete the DDMS Completed By: field when entering a DDMS Live Date</errorMessage>
</ValidationRule>